<?xml version="1.0"?>
<package>
  <name>robocup_referee</name>
  <version>0.0.0</version>
  <description>The robocup refere for kid-size league</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
  <author email="lhofer@labri.fr">Ludovic Hofer</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rhoban_utils</build_depend> <!-- StarkitRobots/utils -->
  <build_depend>hl_monitoring</build_depend> <!-- StarkitRobots/hl_monitoring -->
  
  <run_depend>rhoban_utils</run_depend>
  <run_depend>hl_monitoring</run_depend>

  <export>
  </export>
</package>
